@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [LOG_FORWARDER] [SENTINEL] Add new Log Forwarder to Vulture GUI
 ### Fixed
 - [API_PARSER] [GATEWATCHER_ALERTS] Reduce the page size to 10 to avoid timeout errors
+- [LOG_FORWARDER] [SENTINEL] Add support for proxy to Vulture GUI
 
 
 ## [2.29.1] - 2025-08-22
